# tree2tabular

./: Readme.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pr_to_release.yml  pytest_functions.yml  release_to_pypi.yml
src/: __init__.py
tests/: test_demo_cases.py  test_exceptions.py  test_main.py  test_parent_child.py
tests/case_id_provided/: tabular_hierarchy.csv
tests/case_no_id_provided/: hierarchy_with_ids.yml  tabular_hierarchy.csv
tests/case_readme/: hierarchy_with_ids.yml  tabular_hierarchy.csv
tests/case_some_id_provided/: hierarchy_with_ids.yml  tabular_hierarchy.csv
tests/demo_id_incremental/: hierarchy_with_ids.yml  input_hierarchy.yml  tabular_hierarchy.csv
tests/demo_id_provided/: hierarchy_with_ids.yml  input_hierarchy.yml  tabular_hierarchy.csv
tests/demo_no_id_provided/: hierarchy_with_ids.yml  input_hierarchy.yml  tabular_hierarchy.csv
tests/demo_readme/: hierarchy_with_ids.yml  input_hierarchy.yml  tabular_hierarchy.csv
tests/demo_some_id_provided/: input_hierarchy.yml  tabular_hierarchy.csv
tests/exception_cases/: duplicate_ids.yml  duplicate_names.yml  id_generation_wrong.yml  missing_id.yml
tests/parent_child/: input_hierarchy.yml  parent_child_ids.csv  parent_child_names.csv
tree2tabular/: __init__.py
tree2tabular/src/: __init__.py  srcmain.py
